# binx-jupyter-notebooks

./: README.md  pyproject.toml
AWS/CloudTrail/: CloudTrail Summary.ipynb
