[tool.poetry]
name = "binx-jupyter-notebooks"
version = "0.1.0"
description = ""
authors = ["Thomas de Ruiter <thomasderuiter@binx.io>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
jupyter = ">=1.0.0"
boto3 = ">=1.17.46"
pandas = ">=1.2.3"
jupyterlab = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
